
- Support for the obsolete Numeric module has been removed.
  The *numeric* flavor is no more available (closes :issue:`108`).

- The tables.netcdf3 module has been removed (closes :issue:`68`).

- The :data:`parameters.MAX_THREADS` configuration parameter has been dropped
  in favour of :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` (closes :issue:`147`).


Changes from 2.3.1 to 2.4
=========================

New features
------------

- Improved HDF5 error logging management:

  * added a new function, :func:`silenceHDF5Messages`, for suppressing
    (and re-enabling) HDF5 messages.  By default HDF5 error logging is now
    suppressed. Closes :issue:`87`.
  * now all HDF5 error messages and trace-backs are trapped and attached to
    the :exc:`exceptions.HDF5ExtError` exception instances.
    Closes :issue:`120`.

- Added support for the float16 data type.  It is only available if numpy_
  provides it as well (i.e. numpy_ >= 1.6).  See :issue:`51`.

- Leaf nodes now have attributes for retrieving the size of data in memory
  and on disk.  Data on disk can be compressed, so the new attributes make it
  easy to compute the data compression ration.
  Thanks to Josh Ayers (close :issue:`141`).

- The maximum number of threads for Blosc_ and Numexpr_ is now handled using
  the :data:`parameters.MAX_BLOSC_THREADS` and
  :data:`parameters.MAX_NUMEXPR_THREADS` parameters respectively.
  This allows a more fine grained configuration capability.
  Closes :issue:`142`.

- `ndim` (read-only) attribute added to :class:`Leaf`, :class:`Atom` and
  :class:`Col` objects (closes :issue:`126`).

- Added read support for variable length string attributes (non scalar
  attributes are converted into numpy_ arrays with 'O8' type).
  See :issue:`54`.


Other improvements
------------------

- Dropped support for HDF5 1.6.x. Now PyTables uses the HDF5 1.8 API
  (closes :issue:`105`).

- Blosc_ updated to v. 1.1.3.
